--- a/src/app/add-parent/add-parent.component.html
+++ b/src/app/add-parent/add-parent.component.html
@@ -11,7 +11,11 @@
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" [(ngModel)]="parent.email" name="email" class="form-control" placeholder="Email" required>
+        <input type="email" [(ngModel)]="parent.email" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" [(ngModel)]="parent.password" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Password" required>
       </div>
       <div class="form-group">
         <label for="address">Address</label>
