--- a/src/app/add-student/add-student.component.html
+++ b/src/app/add-student/add-student.component.html
@@ -19,9 +19,19 @@
           <label for="address">Address</label>
           <input type="text" [(ngModel)]="student.address" name="address" class="form-control" placeholder="Address" required>
         </div>
+    
+        
+
+        <!-- Email field -->
         <div class="form-group">
-          <label for="grade">Grade</label>
-          <input type="number" [(ngModel)]="student.grade" name="grade" class="form-control" placeholder="Grade" required>
+          <label for="email">Email</label>
+          <input type="email" [(ngModel)]="student.email" name="email" class="form-control" placeholder="Email" required>
+        </div>
+
+        <!-- Password field -->
+        <div class="form-group">
+          <label for="pwd">Password</label>
+          <input type="password" [(ngModel)]="student.pwd" name="pwd" class="form-control" placeholder="Password" required>
         </div>
 
         <!-- Parent selection -->
