--- a/src/app/dashboard-parent/dashboard-parent.component.html
+++ b/src/app/dashboard-parent/dashboard-parent.component.html
@@ -14,6 +14,7 @@
             <th>Description</th>
             <th>Duration</th>
             <th>Grade</th>
+            <th>Evaluation</th>
             <th>Teacher</th>
           </tr>
         </thead>
@@ -23,6 +24,7 @@
             <td>{{ course.description }}</td>
             <td>{{ course.duration }} hours</td>
             <td>{{ getGrade(child, course) }}</td>
+            <td>{{ getEvaliation(child, course) }}</td>
             <td>
               <button class="btn btn-info" (click)="viewTeacher(course.teacher)">View Teacher</button>
             </td>
