--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,24 +15,17 @@
                 <li *ngIf="user?.role === 'user'" class="nav-item nav-link"><a routerLink="teachers">Teachers</a></li>
                 <li *ngIf="user?.role === 'user'" class="nav-item nav-link"><a routerLink="courses">Courses</a></li>
 
-                <div *ngIf="isLoggedIn() && user.role=='admin'" class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dashboard</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a class="dropdown-item" routerLink="add-course">Add Course</a>
-                        <a class="dropdown-item" routerLink="add-teacher">Add Teacher</a>
-                        <a class="dropdown-item" routerLink="admin">Admin</a>
-                    </div>
-                </div>
-
+                
                 <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="Universities">Universities</a></li>
                 <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="searchCourse">Search Course</a></li>
                 <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a href="contact.html">Contact</a></li>
 
                 <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="SignUp">Signup</a></li>
                 <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="Login">Login</a></li>
+                <li *ngIf="isLoggedIn()" class="nav-item nav-link" style="color: rgb(63, 74, 226);">
+                    <h2 (click)="dashbord()">Welcome {{ user.firstName }}</h2>
+                    <!-- <h2></h2> -->
 
-                <li *ngIf="isLoggedIn()" class="nav-item nav-link">
-                    <h2>Welcome {{ user.firstName }}</h2>
                 </li>
                 <li *ngIf="isLoggedIn()" class="nav-item nav-link">
                     <a routerLink="profile">Profile</a>
